--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
         <script type="text/javascript">
   <!--
   //if (screen.width <= 600) {
-  //  window.location = "index2.html";
+  //  window.location = "https://itsmeodom.github.io/CFP_dash/index2.html";
   //}
   //if (screen.width >= 601) {
-  //  window.location = "index1.html";
+  //  window.location = "https://itsmeodom.github.io/CFP_dash/index1.html";
   //}
   //-->
         </script>  
