--- a/index2.html
+++ b/index2.html
@@ -2,10 +2,19 @@
 <html>
     
     <head>
+        <!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-120788146-3"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-120788146-3');
+</script>
         <script type="text/javascript">
   <!--
   //if (screen.width >= 601) {
-  //  window.location = "index1.html";
+  //  window.location = "index.html";
   //}
   //-->
         </script>  
@@ -19,6 +28,8 @@
         <link rel="stylesheet" href="main.css">
     </head>
     <body>
+            <body onload="setTimeout('redirect()', 300)">
+
     <div class='tableauPlaceholder' id='viz1551741460010' style='position: relative'><noscript><a href='#'><img alt=' ' src='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;JZ&#47;JZ96RKZB7&#47;1_rss.png' style='border: none' /></a></noscript><object class='tableauViz'  style='display:none;'><param name='host_url' value='https%3A%2F%2Fpublic.tableau.com%2F' /> <param name='embed_code_version' value='3' /> <param name='path' value='shared&#47;JZ96RKZB7' /> <param name='toolbar' value='no' /><param name='static_image' value='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;JZ&#47;JZ96RKZB7&#47;1.png' /> <param name='animate_transition' value='yes' /><param name='display_static_image' value='yes' /><param name='display_spinner' value='yes' /><param name='display_overlay' value='yes' /><param name='display_count' value='yes' /></object></div>                <script type='text/javascript'>                    var divElement = document.getElementById('viz1551741460010');                    var vizElement = divElement.getElementsByTagName('object')[0];                    vizElement.style.width='420px';vizElement.style.height='650px';                    var scriptElement = document.createElement('script');                    scriptElement.src = 'https://public.tableau.com/javascripts/api/viz_v1.js';                    vizElement.parentNode.insertBefore(scriptElement, vizElement);                </script>
      
     </body>
